Add JVM config for native access and update README